fix text overflow

--- a/src/styles/ResourceCard.scss
+++ b/src/styles/ResourceCard.scss
@@ -27,10 +27,18 @@
     bottom: 0;
     left: 0;
     padding: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     .card-title {
+      display: inline-block;
       margin: 0;
       font-size: 1.5rem;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 100%;
     }
 
     .card-icon {
